--- a/vkapp_node/public/style.css
+++ b/vkapp_node/public/style.css
@@ -439,7 +439,7 @@ body.voter {
 	position: absolute;
 	margin: 0;
 	width: 69%;
-	background-color: #78DA75;
+	background-color: #19E7CB;
 }
 
 .result-bar-inner-2 {
@@ -448,7 +448,7 @@ body.voter {
 	position: absolute;
 	margin: 0;
 	width: 69%;
-	background-color: #FE6479;
+	background-color: #FE2AA5;
 }
 
 .result-bar-outer span {
