--- a/vkapp_node/public/vk_override.css
+++ b/vkapp_node/public/vk_override.css
@@ -7,8 +7,11 @@ body.hands, body.hands_simple {
 }
 
 .header-vk {
-	background-color: #1F0939;
-	border-radius: 20px;
+	background-color: rgba(31,9,57,0.5);
+    text-align: center;
+    font-size: 30px;
+    line-height: 50px;
+	border-radius: 25px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -27,4 +30,26 @@ body.hands, body.hands_simple {
 
 .input-holder, .input-holder-full, .input-holder input:focus + button, .register_btn, .backbtn {
 	box-shadow: 0 5px 0 0 #6630A0;
+}
+
+.backbtn {
+	top: 95%;
+    display: block;
+    width: 30vw;
+    height: 8vw;
+    left: 20%;
+    box-shadow: 0 3px 0 0 #6630A0;
+    font-size: 4vw;
+}
+
+.btn-main {
+	line-height: 70px;
+    font-size: 40px;
+    text-align: center;
+    vertical-align: middle;
+    padding: 0;
+}
+
+.footer {
+	font-size: 3vw;
 }
