--- a/static_temp/vk_override.css
+++ b/static_temp/vk_override.css
@@ -7,8 +7,11 @@ body.hands, body.hands_simple {
 }
 
 .header-vk {
-	background-color: #1F0939;
-	border-radius: 3vw;
+	background-color: rgba(31,9,57,0.5);
+    text-align: center;
+    font-size: 30px;
+    line-height: 50px;
+	border-radius: 25px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -25,6 +28,47 @@ body.hands, body.hands_simple {
 	box-shadow: 0 5px 0 0 #B828BA;
 }
 
-.input-holder, .input-holder-full, .input-holder input:focus + button, .register_btn {
+.input-holder, .input-holder-full, .input-holder input:focus + button, .register_btn, .backbtn {
 	box-shadow: 0 5px 0 0 #6630A0;
+}
+
+.backbtn {
+	top: 95%;
+    width: 30vw;
+    height: 8vw;
+    left: 20%;
+    box-shadow: 0 3px 0 0 #6630A0;
+    font-size: 4vw;
+}
+
+.btn-main {
+	line-height: 70px;
+    font-size: 40px;
+    text-align: center;
+    vertical-align: middle;
+    padding: 0;
+}
+
+.footer {
+	font-size: 3vw;
+}
+
+.btn.result-bar-outer span {
+	line-height: 16vw;
+	vertical-align: middle;
+}
+
+.questionheader {
+    font-size: 30px;
+}
+
+#timer {
+    font-size: 30px;
+    font-weight: 600;
+    right: 8vw;
+    top: 1.5vw;
+}
+
+body {
+    background-color: rgba(0, 0, 0, 0.5);
 }
