reduced text size

--- a/liver/templates/watcher.html
+++ b/liver/templates/watcher.html
@@ -119,7 +119,7 @@
                 document.getElementById("footemail").style.visibility = "hidden";
                 newHTML = `
                     <p class="simple-text">${data.questionNumber} / ${data.questionCount}</p>
-                    <h2 class="header">${data.questionText}</h2>
+                    <h2 class="header questionheader">${data.questionText}</h2>
                     <div class="stab"><div class="bottom" id="main">`;
                 data.answers.forEach((answer, index) => {
                     newHTML += `<button class="btn btn1" disabled><span class="answer">${answer}</span></button>`;
