--- a/static_temp/vk_override.css
+++ b/static_temp/vk_override.css
@@ -59,7 +59,7 @@ body.hands, body.hands_simple {
 }
 
 .questionheader {
-    font-size: 30px;
+    font-size: 50px;
 }
 
 #timer {
@@ -71,4 +71,5 @@ body.hands, body.hands_simple {
 
 body {
     background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: darken;
 }
