--- a/liver/templates/watcher.html
+++ b/liver/templates/watcher.html
@@ -77,16 +77,31 @@
             console.error('Game socket closed unexpectedly');
         };
 
+        function convertTimeToNiceString(time) {
+            let minutes = Math.floor(time / 60);
+            let seconds = time - (minutes * 60);
+            if (seconds < 10) {
+                seconds = "0" + seconds.toString();
+            }
+            return `${minutes}:${seconds}`;
+        }
+
         function timer() {
-            document.getElementById("timer").innerHTML = currentTime;
+            document.getElementById("timer").innerHTML = convertTimeToNiceString(currentTime);
             currentTime -= 1;
             if (currentTime === -1) {
                 clear(true);
             }
         }
 
-        function clear() {
-            document.getElementById("timer").innerHTML = "";
+        function hiddenTimer() {
+            spent += 1;
+        }
+
+        function clear(keep_number) {
+            if (!keep_number) {
+                document.getElementById("timer").innerHTML = "";
+            }
             clearInterval(timerInterval);
         }
     
