--- a/static_temp/vk_override.css
+++ b/static_temp/vk_override.css
@@ -63,11 +63,10 @@ body.hands, body.hands_simple {
 }
 
 #timer {
-    font-size: 30px;
+    font-size: 3vw;
     font-weight: 600;
     right: 8vw;
-    top: 1.5vw;
-}
+    top: -1.5vw;
 
 body {
     background-color: rgba(0, 0, 0, 0.5);
