--- a/static_temp/vk_override.css
+++ b/static_temp/vk_override.css
@@ -50,7 +50,8 @@ body.hands, body.hands_simple {
 }
 
 .footer {
-	font-size: 3vw;
+    font-size: 1vw;
+    font-style: normal;
 }
 
 .btn.result-bar-outer span {
@@ -67,6 +68,7 @@ body.hands, body.hands_simple {
     font-weight: 600;
     right: 8vw;
     top: -1.5vw;
+}
 
 body {
     background-color: rgba(0, 0, 0, 0.5);
