watcher text size increase and reposition

--- a/static_temp/vk_override.css
+++ b/static_temp/vk_override.css
@@ -59,7 +59,10 @@ body.hands, body.hands_simple {
 }
 
 .questionheader {
-    font-size: 50px;
+    font-size: 60px;
+    width: 60vw;
+    margin-left: 50%;
+    transform: translateX(-50%);
 }
 
 #timer {
