--- a/liver/templates/watcher.html
+++ b/liver/templates/watcher.html
@@ -52,7 +52,7 @@
     <body class="hands">
         <div id="gamezone">
             <div class="center" id="main">
-                <button class="btn btn-main center" id="mainButton">VK ADD</button>
+                <button class="btn btn-main center" id="mainButton">HANDSAPP</button>
             </div>
         </div>
         <div id="footemail">
