--- a/liver/templates/game_screen.html
+++ b/liver/templates/game_screen.html
@@ -53,7 +53,7 @@
 <body class="hands">
 	<div id="gamezone">
 		<div class="center" id="main">
-			<button class="btn btn-main center" id="mainButton">ADD VK</button>
+			<button class="btn btn-main center" id="mainButton">HANDSAPP</button>
 		</div>
 	</div>
 	<div id="footemail">
