--- a/liver/templates/watcher.html
+++ b/liver/templates/watcher.html
@@ -47,7 +47,7 @@
         <link href="{% static 'Montserrat.css' %}" rel="stylesheet">
         <title>HandsApp</title>
         <link href="{% static 'style.css' %}" rel="stylesheet">
-        <!-- <link href="{% static 'vk_override.css' %}" rel="stylesheet"> -->
+        <link href="{% static 'vk_override.css' %}" rel="stylesheet">
     </head>
     <body class="hands">
         <div id="gamezone">
