--- a/static_temp/vk_override.css
+++ b/static_temp/vk_override.css
@@ -3,10 +3,11 @@
 }
 
 body.hands, body.hands_simple {
-    background-image: url("./bg-simple.svg") !important;
+    background-image: url("/bg-simple.svg") !important;
 }
 
 .header-vk {
+	background-color: rgba(31,9,57,0.5);
     text-align: center;
     font-size: 30px;
     line-height: 50px;
@@ -49,22 +50,30 @@ body.hands, body.hands_simple {
 }
 
 .footer {
-	font-size: 3vw;
+    font-size: 1vw;
+    font-style: normal;
 }
 
 .btn.result-bar-outer span {
-	line-height: 16vw;
+	line-height: 6vw;
 	vertical-align: middle;
 }
 
 .questionheader {
-    font-size: 25px;
+    font-size: 50px;
+    width: 60vw;
+    margin-left: 50%;
+    transform: translateX(-50%);
 }
 
 #timer {
-    font-size: 30px;
+    font-size: 3vw;
     font-weight: 600;
-	top: 1.5vw;
-	left: 50%;
-	transform: translateX(-50%);
+    right: 8vw;
+    top: -1.5vw;
+}
+
+body {
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: darken;
 }
