--- a/static_temp/style.css
+++ b/static_temp/style.css
@@ -10,11 +10,11 @@ body {
 }
 
 body.hands {
-	background-image: url("/bg-simple.svg");
+	background-image: url("./bg-simple.svg");
 }
 
 body.hands_simple {
-	background-image: url("/bg-simple.svg");
+	background-image: url("./bg-simple.svg");
 }
 
 body.voter {
@@ -25,7 +25,7 @@ body.voter {
 	position: relative;
 	border-radius: 3vw;
 	border: #ffffff solid 5px;
-	background-image: url("/plus.png");
+	background-image: url("./plus.png");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 10%;
@@ -36,7 +36,7 @@ body.voter {
 }
 
 .editor-question p {
-	font-family: 'TT Commons', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 600;
 	position: absolute;
 	color: #ffffff;
@@ -46,7 +46,7 @@ body.voter {
 }
 
 .editor-answer p {
-	font-family: 'TT Commons', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 600;
 	color: #ffffff;
 	font-size: 30px;
@@ -60,7 +60,7 @@ body.voter {
 	position: relative;
 	border-radius: 1vw;
 	border: #ffffff solid 5px;
-	background-image: url("/plus.png");
+	background-image: url("./plus.png");
 	background-repeat: no-repeat;
 	background-position: 5vw center;
 	background-size: 8%;
@@ -77,7 +77,7 @@ body.voter {
 	text-align: center;
 	line-height: 5vh;
 	font-size: 2vh;
-	font-family: 'TT Commons', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 600;
 }
 
@@ -131,7 +131,7 @@ body.voter {
 }
 
 .c p {
-	font-family: 'TT Commons', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 600;
 	position: absolute;
 }
@@ -139,7 +139,7 @@ body.voter {
 .c-add {
 	border-radius: 5%;
 	border: #ffffff solid 5px;
-	background-image: url("/plus.png");
+	background-image: url("./plus.png");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 10%;
@@ -166,7 +166,7 @@ body.voter {
 	position: absolute;
 	background-color: transparent;
 	border: none;
-	background-image: url("/arrow_violet.png");
+	background-image: url("./arrow_violet.png");
 	background-size: 100%;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -186,7 +186,7 @@ body.voter {
 	background-size: 200%;
 	background-repeat: no-repeat;
 	background-position: center;
-	background-image: url("/download.png");
+	background-image: url("./download.png");
 }
 
 .eye {
@@ -199,7 +199,7 @@ body.voter {
 	background-size: 150%;
 	background-repeat: no-repeat;
 	background-position: center;
-	background-image: url("/eye.png");
+	background-image: url("./eye.png");
 }
 
 .trash {
@@ -212,10 +212,10 @@ body.voter {
 	background-size: 150%;
 	background-repeat: no-repeat;
 	background-position: center;
-	background-image: url("/trash.png");
+	background-image: url("./trash.png");
 }
 
-.removeAnswer {
+.markAsCorrect {
 	position: absolute;
 	background-color: transparent;
 	border:none;
@@ -225,7 +225,7 @@ body.voter {
 	background-size: 100%;
 	background-repeat: no-repeat;
 	background-position: center;
-	background-image: url("/x.png");
+	background-image: url("./plus.png");
 }
 
 .btn-round {
@@ -241,14 +241,14 @@ body.voter {
 	background-size: 50%;
 	background-repeat: no-repeat;
 	background-position: center;
-	background-image: url("/plus_violet.png");
+	background-image: url("./plus_violet.png");
 	box-shadow: 0 10px 0 0 #B28BD5;
 }
 
 .delete-btn {
 	height: 20%;
 	width: 20%;
-	background-image: url("/trash.png");
+	background-image: url("./trash.png");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
@@ -264,7 +264,7 @@ body.voter {
 	top: 95%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	font-family: 'TT Commons', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 600;
 	font-size: 2vw;
 	color: white;
@@ -276,7 +276,7 @@ body.voter {
 
 .bottom {
 	position: absolute;
-	bottom: 10%;
+	bottom: 20%;
 	left: 50%;
 	transform: translateX(-50%);
 }
@@ -287,7 +287,7 @@ body.voter {
 	height: 16vw;
 	border-radius: 8vw;
 	border: none;
-	font-family: 'TT Commons', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 500;
 	font-size: 4vw;
 	margin-top: 20px;
@@ -317,7 +317,7 @@ body.voter {
 
 .btn2 {
 	background-color: #9045E1;
-	background-image: url("/arrow_white.png");
+	background-image: url("./arrow_white.png");
 	background-position: right 4vw center;
 	background-repeat: no-repeat;
 	background-size: auto 35%;
@@ -385,7 +385,7 @@ body.voter {
 	width: 54vw;
 	font-size: 4vw;
 	padding-left: 6vw;
-	font-family: 'TT Commons', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 500;
 }
 
@@ -399,7 +399,7 @@ body.voter {
 }
 
 .input-holder button {
-	background-image: url("/arrow_violet.png");
+	background-image: url("./arrow_violet.png");
 	background-size: 60%;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -469,25 +469,26 @@ body.voter {
 
 .header {
 	display:block;
-	font-family: 'TT Commons', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 800;
-	font-size: 40px;
+	font-size: 6vw;
 	color: white;
 	margin: 8vw;
 	margin-bottom: 10px;
+	line-height: 6vw;
 }
 
 .editor-header {
-	font-family: 'TT Commons', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 800;
 	font-size: 6vw;
 	color: #ffffff;
 }
 
 .simple-text {
-	font-family: 'TT Commons', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 600;
-	font-size: 30px;
+	font-size: 4vw;
 	color: white;
 	margin: 8vw;
 }
@@ -526,7 +527,7 @@ body.voter {
 	height: 10vw;
 	line-height: 10vw;
 	color: #ffffff;
-	font-family: 'TT Commons', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 600;
 	font-size: 4vw;
 }
@@ -536,12 +537,10 @@ body.voter {
 }
 
 .name {
-	width: 60vw;
+	width: 63vw;
 }
 
 .score {
-	position: relative;
-	right: 0;
 	width: 8vw;
 	text-align: center;
 }
@@ -555,7 +554,7 @@ body.voter {
 	display: block;
 	border-radius: 5vw;
 	border: none;
-	font-family: 'TT Commons', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 500;
 	font-size: 4vw;
 	line-height: 10vw;
@@ -563,7 +562,7 @@ body.voter {
 	width: 35vw;
 	height: 10vw;
 	background-color: #9045E1;
-	background-image: url("/arrow_white.png");
+	background-image: url("./arrow_white.png");
 	background-position: right 4vw center;
 	background-repeat: no-repeat;
 	background-size: auto 35%;
@@ -582,7 +581,7 @@ textarea {
 	width: 70%;
 	height: 70%;
 	transform: translate(-50%, -50%);
-	font-family: 'TT Commons', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 500;
 	font-size: 3vw;
 	color: #ffffff;
@@ -633,14 +632,12 @@ textarea {
 		margin: 0;
 		padding: 2vw 8vw;
 		margin-bottom: 10px;
-		text-align: center;
 	}
 
 	.simple-text {
 		font-size: 3vw;
 		margin: 0;
 		padding: 1vw 8vw;
-		text-align: center;
 	}
 
 	.bottom {
@@ -696,28 +693,9 @@ textarea {
 
 #timer {
 	position: absolute;
-    top: 0;
-	font-family: "TT Commons", sans-serif;
-	font-weight: 600;
-	font-size: 30px;
-	color: white;
-	left: 70%;
-	transform: translateX(-99%);
-}
-
-.backbtn {
-	position: absolute;
-	top: 90%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-    background-color: #9045E1;
-    box-shadow: 0 10px 0 0 #6630A0;
-    font-family: 'TT Commons', sans-serif;
-    color: #ffffff;
-    width: 40vw;
-    height: 10vw;
-    font-size: 3vw;
-    border: none;
-	border-radius: 5vw;
-	display: none;
+	top: 0;
+	right: 0;
+	padding-right: 50px;
+	font-size: 50px;
+	color: #ffffff;
 }
