post vk override; code needs cleaning btw

--- a/liver/templates/watcher.html
+++ b/liver/templates/watcher.html
@@ -48,6 +48,7 @@
         <title>HandsApp</title>
         <link href="{% static 'style.css' %}" rel="stylesheet">
         <link href="{% static 'vk_override.css' %}" rel="stylesheet">
+        <link href="{% static 'postvk_override.css' %}" rel="stylesheet">
     </head>
     <body class="hands">
         <div id="gamezone">
