--- a/banner/templates/main_screen.html
+++ b/banner/templates/main_screen.html
@@ -103,7 +103,7 @@
             gamezone.innerHTML = `<h2 class="header">Подождите, пожалуйста, игра скоро начнется...</h2><p class="simple-text" id="user-text">С вами уже играет ${usercount} человек</p>`;
 				};
         setTimeout(checker, 1000);
-        document.getElementById('mainButton').addEventListener('click', openCodeForm);
+        document.getElementById('mainButton').addEventListener('click', openWaitingScreen);
     </script>
     <script src='{% static "jquery-3.1.0.min.js" %}'></script>
 </html>
