--- a/banner/templates/main_screen.html
+++ b/banner/templates/main_screen.html
@@ -61,7 +61,7 @@
         <h2 id="timer"></h2>
     </body>
     <script>
-        var usercount, useragainst, right, percent;
+        var usercount=0, useragainst=0, right=1, percent=1;
 
         function gamescreen() {
             let newHTML;
