--- a/banner/templates/mehikovoter.html
+++ b/banner/templates/mehikovoter.html
@@ -68,189 +68,189 @@
 	</div>
 	<h2 id="timer"></h2>
 	<script>
-			let main = document.getElementById('main');
-			let gamezone = document.getElementById('gamezone');
-			let name, code, xhr, question_id;
-			var people_count=1;
-			let roomName, chatSocket;
-			let currentTime = 15;
-			let timerInterval = null;
-			let spent = 0;
-			let hiddenInterval = null;
+			// let main = document.getElementById('main');
+			// let gamezone = document.getElementById('gamezone');
+			// let name, code, xhr, question_id;
+			// var people_count=1;
+			// let roomName, chatSocket;
+			// let currentTime = 15;
+			// let timerInterval = null;
+			// let spent = 0;
+			// let hiddenInterval = null;
 
-			function convertTimeToPrettyString(time) {
-				let minutes = Math.floor(time / 60);
-				let seconds = time - (minutes * 60);
-				return `${minutes}:${seconds}`;
-			}
+			// function convertTimeToPrettyString(time) {
+			// 	let minutes = Math.floor(time / 60);
+			// 	let seconds = time - (minutes * 60);
+			// 	return `${minutes}:${seconds}`;
+			// }
 
-			function timer() {
-				document.getElementById("timer").innerHTML = convertTimeToPrettyString(currentTime);
-				currentTime -= 1;
-				if (currentTime === -1) {
-					clear(true);
-				}
-			}
+			// function timer() {
+			// 	document.getElementById("timer").innerHTML = convertTimeToPrettyString(currentTime);
+			// 	currentTime -= 1;
+			// 	if (currentTime === -1) {
+			// 		clear(true);
+			// 	}
+			// }
 
-			function hiddenTimer() {
-				spent += 1;
-			}
+			// function hiddenTimer() {
+			// 	spent += 1;
+			// }
 
-			function clear(keep_number) {
-				if (!keep_number) {
-        			document.getElementById("timer").innerHTML = "";
-				}
-        		clearInterval(timerInterval);
-    		}
+			// function clear(keep_number) {
+			// 	if (!keep_number) {
+        	// 		document.getElementById("timer").innerHTML = "";
+			// 	}
+        	// 	clearInterval(timerInterval);
+    		// }
 		
-			function sendAnswer(ind, question_id) {
-				clear(true);
-				chatSocket.send(JSON.stringify({message: "answer", name: name, answer: ind, question_id: question_id, time: spent}));
-				let elems = document.getElementsByClassName("btn1");
-				[...elems].forEach((elem) => {
-					elem.disabled = true;
-				});
-			}
+			// function sendAnswer(ind, question_id) {
+			// 	clear(true);
+			// 	chatSocket.send(JSON.stringify({message: "answer", name: name, answer: ind, question_id: question_id, time: spent}));
+			// 	let elems = document.getElementsByClassName("btn1");
+			// 	[...elems].forEach((elem) => {
+			// 		elem.disabled = true;
+			// 	});
+			// }
 		
-			function processResults() {
-				if (xhr.readyState != 4) return;
-				gamezone.innerHTML = xhr.responseText;
-			}
+			// function processResults() {
+			// 	if (xhr.readyState != 4) return;
+			// 	gamezone.innerHTML = xhr.responseText;
+			// }
 		
-			function loadResults(d) {
-				console.log(name);
-				console.log(roomName);
-				$.ajax({
-					'url': '/leaderboard',
-					'type': 'GET',
-					'data': {
-						'name':name,
-						'url': roomName
-					},
-					'success': (data) => {
-						if (data.length >= 100) {
-							gamezone.innerHTML = data;
-						}
-					}
-				});
-			}
+			// function loadResults(d) {
+			// 	console.log(name);
+			// 	console.log(roomName);
+			// 	$.ajax({
+			// 		'url': '/leaderboard',
+			// 		'type': 'GET',
+			// 		'data': {
+			// 			'name':name,
+			// 			'url': roomName
+			// 		},
+			// 		'success': (data) => {
+			// 			if (data.length >= 100) {
+			// 				gamezone.innerHTML = data;
+			// 			}
+			// 		}
+			// 	});
+			// }
 		
-			function processMessage(d) {
-				let data = JSON.parse(d.data);
-				let newHTML;
-				if (data.message === 'question') {
-					currentTime = 15;
-					timerInterval = setInterval(timer, 1000);
-					spent = 0;
-				} else {
-					clear();
-				}
-				if (data.message === 'question' && data.status === 'player') {
-					document.getElementById("footemail").style.visibility = "hidden";
-					newHTML = `
-						<p class="simple-text">${data.questionNumber} / ${data.questionCount}</p>
-						<h2 class="header">${data.questionText}</h2>
-						<div class="stab"><div class="bottom" id="main">`;
-					data.answers.forEach((answer, index) => {
-						newHTML += `<button class="btn btn1" onclick="this.classList.add('chosen');sendAnswer(${data.ids[index]}, ${data.question_id})"><span class="answer">${answer}</span></button>`;
-					});
-					newHTML += "</div></div>";
-					gamezone.innerHTML = newHTML;
-				} else if (data.message === 'question_results' && data.status === 'player') {
-					let stabilizer = document.getElementsByClassName('stab')[0];
-					newHTML = `<div class="bottom" id="main">`;
-					data.results.forEach((answer) => {
-						newHTML += `<div class="btn result-bar-outer">
-							<div class="result-bar-inner-${answer.right ? 1 : 2}" style="width: ${answer.percent}%"></div>
-							<span class="answer">${answer.text}</span>
-							<span class="percent">${answer.percent}%</span></div>`;
-					});
-					newHTML += "</div>";
-					stabilizer.innerHTML = newHTML;
-				} else if (data.message === 'results') {
-					//document.getElementById("footemail").style.visibility = "visible";
-					newHTML = `<h2 class="header">Вы ответили правильно на ${data.correctAnswersCount} вопросов из ${data.questionCount}!</h2>
-						<img class="hands-low" src="/hands.svg" />
-						<div class="center">
-							<button class="btn btn2" id="resultsButton">Все результаты</button>
-						</div>`;
-						gamezone.innerHTML = newHTML;
-					document.getElementById('resultsButton').addEventListener('click', loadResults);
-					document.getElementById('footemail').style.visibility = "visible";
-				} else if (data.message === 'player_count') {
-					people_count = data.count;
-					var counter = document.getElementById("user-text");
-					if (counter) {
-						counter.innerHTML = `С вами уже играет ${people_count} человек`;
-					}
-					//gamezone.innerHTML = `<h2 class="header">Подождите, пожалуйста, игра скоро начнется...</h2><p class="simple-text">С вами уже играет ${people_count} человек</p>`;
-				}
-			}
+			// function processMessage(d) {
+			// 	let data = JSON.parse(d.data);
+			// 	let newHTML;
+			// 	if (data.message === 'question') {
+			// 		currentTime = 15;
+			// 		timerInterval = setInterval(timer, 1000);
+			// 		spent = 0;
+			// 	} else {
+			// 		clear();
+			// 	}
+			// 	if (data.message === 'question' && data.status === 'player') {
+			// 		document.getElementById("footemail").style.visibility = "hidden";
+			// 		newHTML = `
+			// 			<p class="simple-text">${data.questionNumber} / ${data.questionCount}</p>
+			// 			<h2 class="header">${data.questionText}</h2>
+			// 			<div class="stab"><div class="bottom" id="main">`;
+			// 		data.answers.forEach((answer, index) => {
+			// 			newHTML += `<button class="btn btn1" onclick="this.classList.add('chosen');sendAnswer(${data.ids[index]}, ${data.question_id})"><span class="answer">${answer}</span></button>`;
+			// 		});
+			// 		newHTML += "</div></div>";
+			// 		gamezone.innerHTML = newHTML;
+			// 	} else if (data.message === 'question_results' && data.status === 'player') {
+			// 		let stabilizer = document.getElementsByClassName('stab')[0];
+			// 		newHTML = `<div class="bottom" id="main">`;
+			// 		data.results.forEach((answer) => {
+			// 			newHTML += `<div class="btn result-bar-outer">
+			// 				<div class="result-bar-inner-${answer.right ? 1 : 2}" style="width: ${answer.percent}%"></div>
+			// 				<span class="answer">${answer.text}</span>
+			// 				<span class="percent">${answer.percent}%</span></div>`;
+			// 		});
+			// 		newHTML += "</div>";
+			// 		stabilizer.innerHTML = newHTML;
+			// 	} else if (data.message === 'results') {
+			// 		//document.getElementById("footemail").style.visibility = "visible";
+			// 		newHTML = `<h2 class="header">Вы ответили правильно на ${data.correctAnswersCount} вопросов из ${data.questionCount}!</h2>
+			// 			<img class="hands-low" src="/hands.svg" />
+			// 			<div class="center">
+			// 				<button class="btn btn2" id="resultsButton">Все результаты</button>
+			// 			</div>`;
+			// 			gamezone.innerHTML = newHTML;
+			// 		document.getElementById('resultsButton').addEventListener('click', loadResults);
+			// 		document.getElementById('footemail').style.visibility = "visible";
+			// 	} else if (data.message === 'player_count') {
+			// 		people_count = data.count;
+			// 		var counter = document.getElementById("user-text");
+			// 		if (counter) {
+			// 			counter.innerHTML = `С вами уже играет ${people_count} человек`;
+			// 		}
+			// 		//gamezone.innerHTML = `<h2 class="header">Подождите, пожалуйста, игра скоро начнется...</h2><p class="simple-text">С вами уже играет ${people_count} человек</p>`;
+			// 	}
+			// }
 		
-			function openWaitingScreen() {
-				name = document.getElementById('nameInput').value;
-				console.log(name)
-				$.ajax({
-					url: '/validate_username',
-					data: {
-					'username': name,
-					'url': roomName
-					},
-					dataType: 'json',
-					success: function (data) {
-					if (true) {
-						console.log("OK");
-						people_count = data['count']
-						name = data['user_id']
-					}
-					}
-				});
+			// function openWaitingScreen() {
+			// 	name = document.getElementById('nameInput').value;
+			// 	console.log(name)
+			// 	$.ajax({
+			// 		url: '/validate_username',
+			// 		data: {
+			// 		'username': name,
+			// 		'url': roomName
+			// 		},
+			// 		dataType: 'json',
+			// 		success: function (data) {
+			// 		if (true) {
+			// 			console.log("OK");
+			// 			people_count = data['count']
+			// 			name = data['user_id']
+			// 		}
+			// 		}
+			// 	});
 
-				// document.body.className = "hands_simple"
-				gamezone.innerHTML = `<h2 class="header">Подождите, пожалуйста, игра скоро начнется...</h2><p class="simple-text" id="user-text">С вами уже играет ${people_count} человек</p>`;
-				chatSocket.send(JSON.stringify({message: "new_user", name: name}));
-			};
+			// 	// document.body.className = "hands_simple"
+			// 	gamezone.innerHTML = `<h2 class="header">Подождите, пожалуйста, игра скоро начнется...</h2><p class="simple-text" id="user-text">С вами уже играет ${people_count} человек</p>`;
+			// 	chatSocket.send(JSON.stringify({message: "new_user", name: name}));
+			// };
 		
-			function openCodeForm() {
-				document.getElementById("footemail").style.visibility = "hidden";
-				main.innerHTML = '<div class="input-holder"><input type="text" id="codeInput" placeholder="Введите код" /><button type="button" id="codeFormButton"></button></div>';
-				document.getElementById('codeFormButton').addEventListener('click', openNameForm);
-			};
+			// function openCodeForm() {
+			// 	document.getElementById("footemail").style.visibility = "hidden";
+			// 	main.innerHTML = '<div class="input-holder"><input type="text" id="codeInput" placeholder="Введите код" /><button type="button" id="codeFormButton"></button></div>';
+			// 	document.getElementById('codeFormButton').addEventListener('click', openNameForm);
+			// };
 
-			function connectGame() {
-				chatSocket = new WebSocket('wss://' + window.location.host + '/ws/quiz/' + roomName + '/');
-				chatSocket.onmessage = processMessage;
-				chatSocket.onclose = function(event){
-						console.log(event);
-						setTimeout(connectGame, 1000); 
-				}
-			}
+			// function connectGame() {
+			// 	chatSocket = new WebSocket('wss://' + window.location.host + '/ws/quiz/' + roomName + '/');
+			// 	chatSocket.onmessage = processMessage;
+			// 	chatSocket.onclose = function(event){
+			// 			console.log(event);
+			// 			setTimeout(connectGame, 1000); 
+			// 	}
+			// }
 		
-			function openNameForm() {
-				code = document.getElementById('codeInput').value;
-				$.ajax({
-					url: '/validate_code',
-					data: {
-					'code': code
-					},
-					dataType: 'json',
-					success: function (data) {
-					if (data['resp']==200 && code != '') {
-						roomName = data['url'];
-						currentTime = data['timer'];
-						connectGame();
-						main.innerHTML = '<div class="input-holder"><input type="text" id="nameInput" placeholder="Представьтесь" /><button type="button" id="nameFormButton"></button></div>';
-				document.getElementById('nameFormButton').addEventListener('click', openWaitingScreen);
-					}
-					else{
-						alert("Incorrect code!")
-						openCodeForm();
-					}
-					}
-				});
-			};
+			// function openNameForm() {
+			// 	code = document.getElementById('codeInput').value;
+			// 	$.ajax({
+			// 		url: '/validate_code',
+			// 		data: {
+			// 		'code': code
+			// 		},
+			// 		dataType: 'json',
+			// 		success: function (data) {
+			// 		if (data['resp']==200 && code != '') {
+			// 			roomName = data['url'];
+			// 			currentTime = data['timer'];
+			// 			connectGame();
+			// 			main.innerHTML = '<div class="input-holder"><input type="text" id="nameInput" placeholder="Представьтесь" /><button type="button" id="nameFormButton"></button></div>';
+			// 	document.getElementById('nameFormButton').addEventListener('click', openWaitingScreen);
+			// 		}
+			// 		else{
+			// 			alert("Incorrect code!")
+			// 			openCodeForm();
+			// 		}
+			// 		}
+			// 	});
+			// };
 		
-			document.getElementById('mainButton').addEventListener('click', openCodeForm);
+			// document.getElementById('mainButton').addEventListener('click', openCodeForm);
 		</script>
 		<script src='{% static "jquery-3.1.0.min.js" %}'></script>
 </body>
