--- a/banner/templates/main_screen.html
+++ b/banner/templates/main_screen.html
@@ -71,7 +71,7 @@
                 <div class="stab"><div class="bottom" id="main">`;
             newHTML += `<div class="btn result-bar-outer">
                 <div class="result-bar-inner-${right}" style="width: ${percent}%"></div>
-                <span class="answer">Неодобрение</span>
+                <span class="answer">${useragainst}/${usercount}</span>
                 <span class="percent">${percent}%</span></div>`;
             newHTML += "</div></div>";
             gamezone.innerHTML = newHTML;
