--- a/adminka/templates/master-questions.html
+++ b/adminka/templates/master-questions.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Настройка</title>
-		<link href='{% static "style.css" %}' rel="stylesheet">
-		<link href='{% static "bootstrap-grid.min.css" %}' rel="stylesheet">
+		<link href='style.css' rel="stylesheet">
+		<link href="bootstrap-grid.min.css" rel="stylesheet">
 	</head>
 	<body class="hands">
 		<span class="d-none" id="quizId">{{quiz.id}}</span>
@@ -37,6 +37,6 @@
 			</div>
 		</div>
 		<button class="btn-round"></button>
-		<script src='{% static "app.js" %}'></script>
+		<script src="app.js"></script>
 	</body>
 </html>
